--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
+<!DOCTYPE html>
+
 <html>
   <head>
-    <title>My blog</title>
+    <title> Tess' Blog </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+
+  </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
+   <div class="header">
+    <h1>Kia ora Taiao! You have entered Tess' blog </h1> 
+    <a class=head-options href=#> About me </a>
+    <a class=head-options href=#> Blog </a>
+    <a class=head-options href=#> pictures of dogs </a>
+    <a class=head-options href=#> Contact </a>
+  </div>
+
     <p> It will eventually contain a list of links to all my blogs. </p>
   </body>
 </html>
