--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> Tess' Blog </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
   </head>
   <body>
@@ -12,10 +13,12 @@
     <h1>Kia ora Taiao! You have entered Tess' blog </h1> 
     <a class=head-options href=#> About me </a>
     <a class=head-options href=#> Blog </a>
-    <a class=head-options href=#> pictures of dogs </a>
+    <a class=head-options href=#> Pictures of Dogs </a>
     <a class=head-options href=#> Contact </a>
   </div>
 
-    <p> It will eventually contain a list of links to all my blogs. </p>
+  <div class=text-box>
+    <p> “YOU DON’T HAVE TO BE GREAT TO START, BUT YOU HAVE TO START TO BE GREAT.”</p>
+    </div>
   </body>
 </html>
