--- a/dogs.html
+++ b/dogs.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title> Tess' Blog </title>
+    <title> DOGS </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
@@ -10,15 +10,13 @@
   </head>
   <body>
    <div class="header">
-    <h1>Kia ora Taiao! You have entered Tess' blog </h1> 
+    <h1>You asked for it! Here are some goodboys </h1> 
     <a class=head-options href=#> About me </a>
     <a class=head-options href=#> Blog </a>
-    <a class=head-options href=dogs.html> Pictures of Dogs </a>
+    <a class=head-options href=#> Pictures of Dogs </a>
     <a class=head-options href=#> Contact </a>
   </div>
 
-  <div class=text-box>
-    <p> “YOU DON’T HAVE TO BE GREAT TO START, BUT YOU HAVE TO START TO BE GREAT.”</p>
-    </div>
+
   </body>
 </html>
