--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
    <div class="header">
     <h1>Kia ora Taiao! You have entered Tess' blog </h1> 
+    <a class=head-options href=index.html> Home </a>
     <a class=head-options href=#> About me </a>
     <a class=head-options href=#> Blog </a>
     <a class=head-options href=dogs.html> Pictures of Dogs </a>
