--- a/dogs.html
+++ b/dogs.html
@@ -12,7 +12,7 @@
    <div class="header">
     <h1>You asked for it! Here are some goodboys </h1> 
     <a class=head-options href=index.html> Home </a>
-    <a class=head-options href=#> About me </a>
+    <a class=head-options href=about.html> About me </a>
     <a class=head-options href=#> Blog </a>
     <a class=head-options href=#> Pictures of Dogs </a>
     <a class=head-options href=#> Contact </a>
