--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   </head>
   <body>
    <div class="header">
-    <h1>Kia ora Taiao! You have entered Tess' blog </h1> 
+    <h1>Who am I? </h1> 
     <a class=head-options href=index.html> Home </a>
     <a class=head-options href=about.html> About me </a>
     <a class=head-options href=#> Blog </a>
@@ -19,7 +19,7 @@
   </div>
 
   <div class=text-box>
-    <p> “YOU DON’T HAVE TO BE GREAT TO START, BUT YOU HAVE TO START TO BE GREAT.”</p>
+    <p> “i'm still figuring it out.”</p>
     </div>
   </body>
 </html>
