add pictures of dogs

--- a/dogs.html
+++ b/dogs.html
@@ -18,5 +18,21 @@
     <a class=head-options href=#> Contact </a>
   </div>
 
-  </body>
+  <div class="row">
+    <div class="column">
+        <img src="https://66.media.tumblr.com/ae2ca5bf17712e1809741f137f8e02a2/tumblr_np54u9mbWV1s65ibzo1_640.jpg" alt="dog" style="width:100%">
+      </div>
+    <div class="column">
+      <img src="https://66.media.tumblr.com/194a74d826a335e4a5c5ee14bd70f923/tumblr_nnxusdAqoR1qb141to1_500.jpg" alt="dog" style="width:100%">
+    </div>
+    <div class="column">
+       <img src="https://i.ebayimg.com/images/i/382815163345-0-1/s-l1000.jpg" alt="dog" style="width:100%">
+    </div>
+  </div>  
+ 
+  <div class= dog-videos>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/N2_HkWs7OM0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/iIYv16epre8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</body>
 </html>
