add blog and contact files

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   </head>
   <body>
    <div class="header">
-    <h1>Kia ora Taiao! You have entered Tess' blog </h1> 
+    <h1>Contact me!</h1> 
     <a class=head-options href=index.html> Home </a>
     <a class=head-options href=about.html> About me </a>
     <a class=head-options href=blog.html> Blog </a>
@@ -18,8 +18,9 @@
     <a class=head-options href=contact.html> Contact </a>
   </div>
 
-  <div class=text-box>
-    <p> “YOU DON’T HAVE TO BE GREAT TO START, BUT YOU HAVE TO START TO BE GREAT.”</p>
-    </div>
+ <img id=construction-dog src=https://i.kym-cdn.com/photos/images/original/001/387/478/93f.jpg alt="construction dog">
+
+ <p class=content>Your patience is appreciated while we work on this page. Be back soon!</p>
+
   </body>
 </html>
