--- a/dogs.html
+++ b/dogs.html
@@ -13,9 +13,9 @@
     <h1>You asked for it! Here are some goodboys </h1> 
     <a class=head-options href=index.html> Home </a>
     <a class=head-options href=about.html> About me </a>
-    <a class=head-options href=#> Blog </a>
-    <a class=head-options href=#> Pictures of Dogs </a>
-    <a class=head-options href=#> Contact </a>
+    <a class=head-options href=blog.html> Blog </a>
+    <a class=head-options href=dogs.html> Pictures of Dogs </a>
+    <a class=head-options href=contact.html> Contact </a>
   </div>
 
   <div class="row">
