--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,10 @@
   </div>
 
   <div class=text-box>
-    <p> “YOU DON’T HAVE TO BE GREAT TO START, BUT YOU HAVE TO START TO BE GREAT.”</p>
+    <img id=construction-dog src=https://i.kym-cdn.com/photos/images/original/001/387/478/93f.jpg alt="construction dog">
+
+ <p class=content>Your patience is appreciated while we work on this page. Be back soon!</p>
+ 
     </div>
   </body>
 </html>
