fix contact me font-size

--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
   <div class=text-box>
     <img id=construction-dog src=https://i.kym-cdn.com/photos/images/original/001/387/478/93f.jpg alt="construction dog">
 
- <p class=content>Your patience is appreciated while we work on this page. Be back soon!</p>
- 
+ <p>Your patience is appreciated while we work on this page. Be back soon!</p>
+
     </div>
   </body>
 </html>
