--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
   </head>
   <body>
@@ -18,11 +19,31 @@
     <a class=head-options href=contact.html> Contact </a>
   </div>
 
-  <div class=text-box>
+    <!--<div class=text-box>
     <img id=construction-dog src=https://i.kym-cdn.com/photos/images/original/001/387/478/93f.jpg alt="construction dog">
 
- <p>Your patience is appreciated while we work on this page. Be back soon!</p>
+ <p>Your patience is appreciated while we work on this page. Be back soon!</p>-->
 
-    </div>
+ <div class="box">
+	<div class="blog-post">
+		<div class="blog-heading">
+            <h1>Sprint-2 Technical</h1>
+            <h1>What is the difference between Margin, Border, and Padding?</h1>
+        
+		</div>
+		<div class="blog-body">
+            <h6>25th April 2019</h6>
+			<p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dapibus consectetur lacinia. Nunc molestie congue nunc quis placerat. Vivamus efficitur nunc et odio maximus, sed venenatis orci aliquet. Maecenas elit elit, rhoncus imperdiet auctor ac, dapibus et lacus. Nullam vel tortor non ex consequat ullamcorper. Sed facilisis blandit odio, vel eleifend purus luctus quis. Vestibulum eget purus ex. Nam eget orci elementum, feugiat odio eget, consectetur turpis. Nam ac dignissim nisl, et molestie dolor. Duis fermentum, risus sit amet blandit semper, enim odio feugiat lorem, a aliquam urna justo at augue. Sed id sapien eu lacus finibus sagittis.
+
+                Nulla egestas, nibh sed vulputate consectetur, elit ex ultrices sapien, nec semper mauris enim ac leo. Suspendisse mattis odio eros, sit amet euismod odio faucibus id. Mauris sed ligula enim. Aliquam malesuada quam ut mauris pellentesque, nec vulputate odio maximus. Aenean porta rutrum metus, at porttitor enim accumsan et. Aliquam volutpat, dolor id lobortis tincidunt, dui velit luctus ex, in accumsan metus felis et dolor. Cras tincidunt ligula non urna lobortis lacinia. Duis aliquam diam et elit lacinia congue. Maecenas eleifend sit amet tortor sodales pellentesque. In sagittis molestie nunc, eu volutpat augue bibendum at. Aliquam in efficitur turpis. Suspendisse pellentesque a felis et finibus. Duis pharetra nulla at risus maximus molestie.
+            </p>
+            <div class=blog-image>
+                   <img src=https://www.w3.org/TR/CSS2/images/boxdim.png alt=box model>
+            </div>
+		</div>
+	</div>
+
   </body>
 </html>
+
