--- a/sprint1-technical.html
+++ b/sprint1-technical.html
@@ -4,7 +4,7 @@
   <head>
     <title> Tess' Blog </title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/Users/tessmeyer/Desktop/Dev-Academy/tess-meyer.github.io/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="tess-meyer.github.io/styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
