--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,7 @@
 <h1><a class=blog-link href=sprint1-technical.html> Sprint 1 Technical</a> </h1>
 <h1><a class=blog-link href=sprint2-cultural.html> Sprint 2 Cultural</a> </h1>
 <h1><a class=blog-link href=sprint2-technical.html> Sprint 2 Technical</a> </h1>
+<h1><a class=blog-link href=sprint3-cultural.html> Sprint 3 Cultural</a> </h1>
 
   </body>
 </html>
