add sprint 4 cultural blog

--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,7 @@
 <h1><a class=blog-link href=sprint2-technical.html> Sprint 2 Technical</a> </h1>
 <h1><a class=blog-link href=sprint3-cultural.html> Sprint 3 Cultural</a> </h1>
 <h1><a class=blog-link href=sprint3-technical.html> Sprint 3 Technical</a> </h1>
+<h1><a class=blog-link href=sprint4-cultural.html> Sprint 3 Cultural</a> </h1>
 
   </body>
 </html>
