add how to access objects & arrays

--- a/sprint3-technical.html
+++ b/sprint3-technical.html
@@ -39,10 +39,15 @@
                 <p>var cat1 = "Breezy";</p>
                 <p>var cat2 = "Pickles";</p>
                 <p>var cat3 = "Frodo";</p>
-                <p>You can now have var cars = ["Breezy", "Pickles", "Frodo"];<br /><br /></p>
+                <p>You can now have var cats = ["Breezy", "Pickles", "Frodo"];<br /><br /></p>
+                <p>To access data from an array, you can refer to an index number. For example var name = cats[0]; will access breezy because she is the first element and array indexes start with [0] instead of [1]
+                </p>
                 <h2>Objects</h2>
                 <p>An object is a container for <strong>named values </strong>called properties or methods. Just like a real object you can give it properties to describe it. For example:<br /><br /></p>
                 <p>var cat = {firstName:"Breezy", lastName:"Meow", age:18, eyeColor:"Brown"};</p>
+                <p>You can access properties from an object in two different ways. Either with a dot or with square brackets and quotes.
+                  This is seen as breezy.lastName; or breezy["lastName"];
+                </p>
                 <h2>Functions</h2>
                 <p>A function is a a set of statements that performs a task or calculates a value. The code inside the function will execute when something calls the function. This can be a few things like when an event occurs (when a user clicks a button) or when it is invoked (called) from JavaScript code.</p>
                 <p>Functions are useful because you can outline a set of instructions that you can apply lots of different times, to different things so you don&rsquo;t have to write out the same &ldquo;instructions&rdquo; over and over again.</p>
