--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,7 @@
 <h1><a class=blog-link href=sprint3-cultural.html> Sprint 3 Cultural</a> </h1>
 <h1><a class=blog-link href=sprint3-technical.html> Sprint 3 Technical</a> </h1>
 <h1><a class=blog-link href=sprint4-cultural.html> Sprint 4 Cultural</a> </h1>
+<h1><a class=blog-link href=sprint4-technical.html> Sprint 4 Technical</a> </h1>
 
   </body>
 </html>
