add bootcamp learning plan

--- a/sprint2-cultural.html
+++ b/sprint2-cultural.html
@@ -20,39 +20,94 @@
  
   <div class="box">
     <div class="blog-post">
-<h1> My Draft Learning Plan </h1>
-<h3>Long Term Goals</h3>
-<ul>
-<li>I want to work somewhere that aligns with my personal values. A sustainable startup, charity or not-for-profit would suit me well. I have been learning a lot recently about how much help our environment really needs and I can’t think of anything else more important than helping that cause.</li> 
-<li>I want to be stable enough to get a dog and ideally take it with me to work as well.</li>
-<li>I want to continue learning every day. I chose Web Development because I know there will be problems to solve every single day and I look forward to the exciting new challenges.</li>
-</ul>
-<h3>Non-tech skills I would like to develop</h3>
-<ul>
-    <li>I would like to learn how to act in a professional setting. I have only ever had jobs where management is extremely laid back and relaxed and have never been in anything remotely close to an office job. </li>
-    <li>Networking - During my day in the life experience Rohan described tech in NZ as “nepotism on steroids”. I’d like to learn more effective ways to network and make connections.</li>
-    <li>Time management - I blame shift work for making me only productive for half a day at a time. I need to bust these habits and this mindset and learn to manage my time more effectively.</li>
-</ul>
-<h3>Strengths and limitations</h3>
-<h4>Strengths</h4>
-<li>Courage</li>
-<li>Curiosity </li>
-<li>Empathy </li>
-</ul>
-<h4>Weaknesses</h4>
-<ul>
-<li>Anxiety</li>
-<li>Discipline</li>
-</ul>
-I think one of my biggest assets is my courage. It’s an interesting one because I am also a very anxious person by nature and tend to worry a lot everything both little and big (one of my limitations) - but because I worry about things no matter their size, and that I have to do anyway, it almost offsets the same worry that I feel for big leaps and because I am used to “feeling the fear and doing it anyway” I can push past it and take on much larger challenges than what is expected of me. For example i’ll be just as nervous about ordering takeaways on the phone as I am about making a speech in front of 50 people, or buying a one way ticket to africa by myself... It’s quite a strange way to live but it is working for me so far and has lead me to do some incredible things that would only be possible with big leaps. 
-<h3>My commitment</h3>
-<p>I am fully committed to EDA and will do everything I can to ensure success both in my own learning and that of my peers. I will tackle my learning week-by-week and one step at a time, always breaking bigger problems down into more manageable ones. I’ll work with my cohort on common problems and work on my communication skills throughout the course. 
-When I get stuck on a coding problem I will first try and fully understand what the problem really is. Then i’ll break it down into smaller parts and google them to see what I can find. If google isn’t working i’ll reach out to the slack channels if i’m not on campus or to a teacher or other student on campus if i’m there.
-If I come across a non-tech problem (life problem?) I’ll contact Allie or another member of the facilitation team as soon as possible if I think it will affect my learning.
-I expect the facilitation team to be approachable, dependable and understanding. </p>
-<h3>Scheduling</h3>
-<p>I don’t have any block-out times however I am definitely a morning person and am much more productive in the morning than the afternoon. I also have boxing at 6pm on Mondays and Thursdays. These are optional but I do feel like they are hugely beneficial and I always have a much better week when I attend so ideally will leave campus in time to get to those sessions. </p>
-</div>
+  
+      <h1>My Bootcamp learning plan </h1>
+
+  <p><strong>What is your long term goal and/or career pathway?</strong></p>
+  <p>My long term goals have stayed pretty true to what they were in my initial learning
+     plan for foundations. I really want to use the skills I gain to for good, working
+      somewhere that aligns with my values and is environmentally conscious. I&rsquo;m not
+       sure yet where this will lead me but i&rsquo;m incredibly excited for the future.</p>
+  <p><strong>What do you think your biggest strengths and limitations will be in Bootcamp?</strong></p>
+  <p>I think my strengths and limitations were pretty accurate. My anxiety about big tasks 
+    did hinder me a little bit but my courage and motivation took over and got the job done. 
+    I really like the quote &ldquo;Fear is a reaction. Courage is a decision.&rdquo; because
+     it puts the solution in your hands and reminds people that while you can&rsquo;t choose 
+     what you get worried about you can decide how much you let it affect you.</p>
+  <p><strong>What do you think your biggest non-technical challenge at Bootcamp will be?</strong></p>
+  <p>I think staying on top of the material will be quite tricky for me because there is just 
+    SO MUCH of it. Staying focused for such long hours will also be quite hard for me. I really
+     rely on sleep to be able to function and really struggle with less than 8-9 hours and 
+     i&rsquo;ve never had much success doing any kind of study after 7-8pm. I think exercise 
+     will be a big key to success with this so I have more energy and sleep better but I am
+      worried about how the long hours will impact me.</p>
+  <p><strong>What non-technical skills - human skills - would you like to see developed in 
+    yourself while at EDA?</strong></p>
+  <p>I would like to become more confident and develop my leadership skills. I have always
+     been one of the youngest at my previous jobs and I think it made me feel uncomfortable
+      to try and take up a leadership position when I really would have been more than qualified.</p>
+  <p>I also need to learn how to receive negative feedback and see it as an opportunity to 
+    grow rather than something bad.</p>
+  <p><strong>What are your expectations from the Bootcamp team?</strong><br /><br /></p>
+  <p>Above all I expect them to be approachable and understanding. As long as I feel like 
+    I can ask them for help when I need it, i&rsquo;ll be happy.</p>
+  <h2><strong>What are your expectations of yourself on Bootcamp</strong></h2>
+  <p>I know the workload is going to be very intense at (all?) times and i&rsquo;ll do my
+     best to work smart AND hard and be as productive as possible. I plan on using the 
+     knowledge of my peers and teachers and the internet to my advantage, and asking for
+      help early and often before a problem snowballs into something much bigger.</p>
+
+  <h1> My Foundations Learning Plan </h1>
+  <h3>Long Term Goals</h3>
+    <ul>
+      <li>I want to work somewhere that aligns with my personal values. A sustainable startup, charity or not-for-profit would suit me well. I have been learning a lot recently about how much help our environment really needs and I can’t think of anything else more important than helping that cause.</li> 
+      <li>I want to be stable enough to get a dog and ideally take it with me to work as well.</li>
+      <li>I want to continue learning every day. I chose Web Development because I know there will be problems to solve every single day and I look forward to the exciting new challenges.</li>
+    </ul>
+  <h3>Non-tech skills I would like to develop</h3>
+    <ul>
+        <li>I would like to learn how to act in a professional setting. I have only ever had jobs where management is extremely laid back and relaxed and have never been in anything remotely close to an office job. </li>
+        <li>Networking - During my day in the life experience Rohan described tech in NZ as “nepotism on steroids”. I’d like to learn more effective ways to network and make connections.</li>
+        <li>Time management - I blame shift work for making me only productive for half a day at a time. I need to bust these habits and this mindset and learn to manage my time more effectively.</li>
+    </ul>
+  <h3>Strengths and limitations</h3>
+    <h4>Strengths</h4>
+      <li>Courage</li>
+      <li>Curiosity </li>
+      <li>Empathy </li>
+  </ul>
+  <h4>Weaknesses</h4>
+      <ul>
+      <li>Anxiety</li>
+      <li>Discipline</li>
+      </ul>
+      <p>
+    I think one of my biggest assets is my courage. It’s an interesting one because
+    I am also a very anxious person by nature and tend to worry a lot everything both 
+    little and big (one of my limitations) - but because I worry about things no matter
+     their size, and that I have to do anyway, it almost offsets the same worry that 
+     I feel for big leaps and because I am used to “feeling the fear and doing it anyway”
+      I can push past it and take on much larger challenges than what is expected of me. For
+      example i’ll be just as nervous about ordering takeaways on the phone as I am about
+       making a speech in front of 50 people, or buying a one way ticket to africa by 
+      myself... It’s quite a strange way to live but it is working for me so far and has lead
+      me to do some incredible things that would only be possible with big leaps. 
+      </p>
+  <h3>My commitment</h3>
+    <p>I am fully committed to EDA and will do everything I can to ensure success both 
+      in my own learning and that of my peers. I will tackle my learning week-by-week and one 
+      step at a time, always breaking bigger problems down into more manageable ones. I’ll work 
+      with my cohort on common problems and work on my communication skills throughout the course. 
+    When I get stuck on a coding problem I will first try and fully understand what the problem 
+    really is. Then i’ll break it down into smaller parts and google them to see what I can find.
+     If google isn’t working i’ll reach out to the slack channels if i’m not on campus or to a
+      teacher or other student on campus if i’m there.
+    If I come across a non-tech problem (life problem?) I’ll contact Allie or another member 
+    of the facilitation team as soon as possible if I think it will affect my learning.
+    I expect the facilitation team to be approachable, dependable and understanding. </p>
+  <h3>Scheduling</h3>
+  <p>I don’t have any block-out times however I am definitely a morning person and am much more productive in the morning than the afternoon. I also have boxing at 6pm on Mondays and Thursdays. These are optional but I do feel like they are hugely beneficial and I always have a much better week when I attend so ideally will leave campus in time to get to those sessions. </p>
+  </div>
 </div>
 
 </body>
